@@ -16,12 +16,12 @@ package net.rptools.maptool.client.ui.token.dialog.edit;
 
 import com.jidesoft.combobox.MultilineStringExComboBox;
 import com.jidesoft.combobox.PopupPanel;
-import com.jidesoft.grid.AbstractPropertyTableModel;
 import com.jidesoft.grid.MultilineStringCellEditor;
 import com.jidesoft.grid.NavigableModel;
 import com.jidesoft.grid.Property;
 import com.jidesoft.grid.PropertyPane;
 import com.jidesoft.grid.PropertyTable;
+import com.jidesoft.grid.PropertyTableModel;
 import com.jidesoft.plaf.basic.BasicExComboBoxUI;
 import com.jidesoft.swing.CheckBoxListWithSelectable;
 import com.jidesoft.swing.DefaultSelectable;
@@ -43,14 +43,15 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.*;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import javax.swing.*;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
 import javax.swing.table.AbstractTableModel;
+import javax.swing.table.DefaultTableModel;
 import javax.swing.table.TableCellRenderer;
-import javax.swing.text.JTextComponent;
 import javax.swing.text.Position.Bias;
 import javax.swing.text.html.HTMLDocument;
 import javax.swing.text.html.HTMLEditorKit;
@@ -84,6 +85,7 @@ import net.rptools.maptool.model.sheet.stats.StatSheet;
 import net.rptools.maptool.model.sheet.stats.StatSheetLocation;
 import net.rptools.maptool.model.sheet.stats.StatSheetManager;
 import net.rptools.maptool.model.sheet.stats.StatSheetProperties;
+import net.rptools.maptool.util.AuraSyntax;
 import net.rptools.maptool.util.ExtractHeroLab;
 import net.rptools.maptool.util.FunctionUtil;
 import net.rptools.maptool.util.ImageManager;
@@ -109,6 +111,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       RessourceManager.getBigIcon(Icons.EDIT_TOKEN_REFRESH_ON);
   private static final ImageIcon REFRESH_ICON_OFF =
       RessourceManager.getBigIcon(Icons.EDIT_TOKEN_REFRESH_OFF);
+
+  private final TokenPropertiesDialog view;
   private final RSyntaxTextArea xmlStatblockRSyntaxTextArea = new RSyntaxTextArea(2, 2);
   private final RSyntaxTextArea textStatblockRSyntaxTextArea = new RSyntaxTextArea(2, 2);
   private final WordWrapCellRenderer propertyCellRenderer = new WordWrapCellRenderer();
@@ -122,10 +126,15 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   private AutoGenerateTopologySwingWorker autoGenerateTopologySwingWorker =
       new AutoGenerateTopologySwingWorker(false, Color.BLACK);
 
+  private EditTokenDialog(TokenPropertiesDialog view) {
+    super(view.getRootComponent());
+    this.view = view;
+    panelInit();
+  }
+
   /** Create a new token notes dialog. */
   public EditTokenDialog() {
-    super(new TokenPropertiesDialog().getRootComponent());
-    panelInit();
+    this(new TokenPropertiesDialog());
   }
 
   public void initGMNotesEditorPane() {
@@ -175,6 +184,10 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     setUniqueLightSourcesEnabled(MapTool.getPlayer().isGM());
   }
 
+  public void initUniqueAurasTextPane() {
+    setUniqueAurasEnabled(MapTool.getPlayer().isGM());
+  }
+
   public void initJtsMethodComboBox() {
     getJtsMethodComboBox().setModel(new DefaultComboBoxModel<>(JTS_SimplifyMethodType.values()));
   }
@@ -196,6 +209,26 @@ public class EditTokenDialog extends AbeillePanel<Token> {
             super.closeDialog();
           }
         };
+    getTokenLayoutPanel().reset(token);
+    getFlippedX()
+        .addChangeListener(
+            e ->
+                getTokenLayoutPanel()
+                    .getHelper()
+                    .setTokenFlipX(((JCheckBox) e.getSource()).isSelected()));
+    getFlippedY()
+        .addChangeListener(
+            e ->
+                getTokenLayoutPanel()
+                    .getHelper()
+                    .setTokenFlipY(((JCheckBox) e.getSource()).isSelected()));
+    getFlippedIso()
+        .addChangeListener(
+            e ->
+                getTokenLayoutPanel()
+                    .getHelper()
+                    .setTokenFlipIso(((JCheckBox) e.getSource()).isSelected()));
+
     getTokenTopologyPanel().reset(token);
     bind(token);
 
@@ -204,14 +237,15 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     getComponent("@GMName").setEnabled(MapTool.getPlayer().isGM());
 
     setUniqueLightSourcesEnabled(MapTool.getPlayer().isGM());
+    setUniqueAurasEnabled(MapTool.getPlayer().isGM());
 
     dialog.setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
 
     setLibTokenPaneEnabled(token.isLibToken());
-    validateLibTokenURIAccess(getNameField().getName());
+    validateLibTokenURIAccess(getNameField().getText());
     var combo = getStatSheetCombo();
     combo.removeAllItems();
-    // Default Entry
+    /* Default Entry */
     var defaultSS =
         new StatSheet(null, I18N.getText("token.statSheet.useDefault"), null, Set.of(), null);
     combo.addItem(defaultSS);
@@ -232,60 +266,49 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       getLibTokenURIErrorLabel()
           .setText(I18N.getText("EditTokenDialog.libTokenURI.error.notLibToken", name));
       getAllowURLAccess().setEnabled(false);
-      return;
+    } else if (libraryManager.usesReservedPrefix(name.substring(4))) {
+      getLibTokenURIErrorLabel()
+          .setText(
+              I18N.getText(
+                  "macro.setAllowsURIAccess.reservedPrefix",
+                  libraryManager.getReservedPrefix(name.substring(4))));
+      getAllowURLAccess().setEnabled(false);
+    } else if (libraryManager.usesReservedName(name.substring(4))) {
+      getLibTokenURIErrorLabel()
+          .setText(I18N.getText("EditTokenDialog.libTokenURI.error.reserved", name));
+
+      getAllowURLAccess().setEnabled(false);
     } else {
-      if (libraryManager.usesReservedPrefix(name.substring(4))) {
-        getLibTokenURIErrorLabel()
-            .setText(
-                I18N.getText(
-                    "macro.setAllowsURIAccess.reservedPrefix",
-                    libraryManager.getReservedPrefix(name.substring(4))));
-        getAllowURLAccess().setEnabled(false);
-        return;
-      } else if (libraryManager.usesReservedName(name.substring(4))) {
-        getLibTokenURIErrorLabel()
-            .setText(I18N.getText("EditTokenDialog.libTokenURI.error.reserved", name));
-
-        getAllowURLAccess().setEnabled(false);
-        return;
-      }
+      getAllowURLAccess().setEnabled(true);
+      getLibTokenURIErrorLabel().setText(" ");
     }
-
-    getAllowURLAccess().setEnabled(true);
-    getLibTokenURIErrorLabel().setText(" ");
   }
 
   @Override
   public void bind(final Token token) {
-    // ICON
+    /* ICON */
     getTokenIconPanel().setImageId(token.getImageAssetId());
-
-    // NOTES, GM NOTES. Due to the way things happen on different gui threads, the type must be set
-    // before the text
-    // otherwise the wrong values can get populated when the tab change listener fires.
+    /* NOTES, GM NOTES. Due to the way things happen on different gui threads, the type must be set
+    before the text
+    otherwise the wrong values can get populated when the tab change listener fires. */
     getGMNotesEditor().setTextType(token.getGmNotesType());
     getGMNotesEditor().setText(token.getGMNotes());
     getPlayerNotesEditor().setTextType(token.getNotesType());
     getPlayerNotesEditor().setText(token.getNotes());
 
-    // TYPE
+    /* TYPE */
     getTypeCombo().setSelectedItem(token.getType());
 
-    // SIGHT
+    /* SIGHT */
     updateSightTypeCombo();
 
-    // Image Tables
+    /* Image Tables */
     updateImageTableCombo();
 
-    // STATES
-    Component barPanel = null;
+    /* STATES */
     updateStatesPanel();
     Component[] statePanels = getStatesPanel().getComponents();
     for (Component statePanel : statePanels) {
-      if ("bar".equals(statePanel.getName())) {
-        barPanel = statePanel;
-        continue;
-      }
       Component[] states = ((Container) statePanel).getComponents();
       for (Component component : states) {
         JCheckBox state = (JCheckBox) component;
@@ -293,59 +316,56 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       }
     }
 
-    // BARS
-    if (barPanel != null) {
-      Component[] barComponents = ((Container) barPanel).getComponents();
-      JCheckBox cb = null;
-      JSlider bar = null;
-      for (var tokenBarPanel : barComponents) {
-        for (var component : ((Container) tokenBarPanel).getComponents()) {
-          if (component instanceof JCheckBox) {
-            cb = (JCheckBox) component;
-          } else if (component instanceof JSlider) {
-            bar = (JSlider) component;
-          }
+    /* BARS */
+    var barsPanel = getBarsPanel();
+    Component[] barComponents = ((Container) barsPanel).getComponents();
+    JCheckBox cb = null;
+    JSlider bar = null;
+    for (var tokenBarPanel : barComponents) {
+      for (var component : ((Container) tokenBarPanel).getComponents()) {
+        if (component instanceof JCheckBox) {
+          cb = (JCheckBox) component;
+        } else if (component instanceof JSlider) {
+          bar = (JSlider) component;
         }
-        if (token.getState(bar.getName()) == null) {
-          cb.setSelected(true);
-          bar.setEnabled(false);
-          bar.setValue(100);
-        } else {
-          cb.setSelected(false);
-          bar.setEnabled(true);
-          bar.setValue(
-              (int)
-                  (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
-                      * 100));
-        }
+      }
+      if (token.getState(bar.getName()) == null) {
+        cb.setSelected(true);
+        bar.setEnabled(false);
+        bar.setValue(100);
+      } else {
+        cb.setSelected(false);
+        bar.setEnabled(true);
+        bar.setValue(
+            (int)
+                (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
+                    * 100));
       }
     }
 
-    // OWNER LIST
-    EventQueue.invokeLater(() -> getOwnerList().setModel(new OwnerListModel()));
+    /* OWNER LIST */
+    EventQueue.invokeLater(() -> getOwnerList().setModel(new OwnerListModel(token)));
 
-    // SPEECH TABLE
+    /* SPEECH TABLE */
     EventQueue.invokeLater(() -> getSpeechTable().setModel(new SpeechTableModel(token)));
 
-    // Player player = MapTool.getPlayer();
-    // boolean editable = player.isGM() ||
-    // !MapTool.getServerPolicy().useStrictTokenManagement() ||
-    // token.isOwner(player.getName());
-    // getAllPlayersCheckBox().setSelected(token.isOwnedByAll());
-
-    // OTHER
+    /* OTHER */
     getShapeCombo().setSelectedItem(token.getShape());
     setSizeCombo(token);
+    getSnapToGrid().setSelected(token.isSnapToGrid());
+    getFlippedIso().setSelected(token.getIsFlippedIso());
+    getFlippedX().setSelected(token.isFlippedX());
+    getFlippedY().setSelected(token.isFlippedY());
 
-    // Updates the Property Type list.
+    /* Updates the Property Type list. */
     updatePropertyTypeCombo();
 
-    // Set the selected item in Property Type list. Triggers a itemStateChanged event if index != 0
+    /* Set the selected item in Property Type list. Triggers a itemStateChanged event if index != 0 */
     getPropertyTypeCombo().setSelectedItem(token.getPropertyType());
 
-    // If index == 0, the itemStateChanged event wasn't triggered, so we update. Fix #1504
+    /* If index == 0, the itemStateChanged event wasn't triggered, so we update. Fix #1504 */
     if (getPropertyTypeCombo().getSelectedIndex() == 0) {
-      updatePropertiesTable((String) getPropertyTypeCombo().getSelectedItem());
+      updatePropertiesTable(token, (String) getPropertyTypeCombo().getSelectedItem());
     }
 
     getSightTypeCombo()
@@ -362,7 +382,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     getTerrainModifier().setText(Double.toString(token.getTerrainModifier()));
     getTerrainModifierOperationComboBox().setSelectedItem(token.getTerrainModifierOperation());
 
-    // Get tokens ignored list, match to the index in the JList then select them.
+    /* Get tokens ignored list, match to the index in the JList then select them. */
     getTerrainModifiersIgnoredList()
         .setSelectedIndices(
             token.getTerrainModifiersIgnored().stream()
@@ -375,10 +395,22 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 .mapToInt(Integer::valueOf)
                 .toArray());
 
-    getUniqueLightSourcesTextPane()
-        .setText(new LightSyntax().stringifyLights(token.getUniqueLightSources()));
+    var uniqueLightsSources = token.getUniqueLightSources();
+    var uniqueLights = new ArrayList<LightSource>();
+    var uniqueAuras = new ArrayList<LightSource>();
+    for (var lightSource : uniqueLightsSources) {
+      var list =
+          switch (lightSource.getType()) {
+            case NORMAL -> uniqueLights;
+            case AURA -> uniqueAuras;
+          };
+      list.add(lightSource);
+    }
 
-    // Jamz: Init the Topology tab...
+    getUniqueLightSourcesTextPane().setText(new LightSyntax().stringifyLights(uniqueLights));
+    getUniqueAurasTextPane().setText(new AuraSyntax().stringifyAuras(uniqueAuras));
+
+    /* Jamz: Init the Topology tab... */
     JTabbedPane tabbedPane = getTabbedPane();
 
     String topologyTitle = I18N.getText("EditTokenDialog.tab.vbl");
@@ -392,7 +424,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       getVisibilityToleranceSpinner().setValue(token.getAlwaysVisibleTolerance());
       getJtsMethodComboBox().setSelectedItem(getTokenTopologyPanel().getJtsMethod());
 
-      // Reset scale
+      /* Reset scale */
       getTokenTopologyPanel().setScale(1d);
     } else {
       tabbedPane.setEnabledAt(tabbedPane.indexOfTab(topologyTitle), false);
@@ -435,11 +467,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     getAllowURLAccess().setSelected(token.getAllowURIAccess());
 
-    // Jamz: Init the Hero Lab tab...
+    /* Jamz: Init the Hero Lab tab... */
     heroLabData = token.getHeroLabData();
     String heroLabTitle = I18N.getString("EditTokenDialog.tab.hero");
 
     if (heroLabData != null) {
+      getHeroLabImagesList().setCellRenderer(new HeroLabImageListRenderer(heroLabData));
+
       boolean isDirty = heroLabData.isDirty() && heroLabData.getPortfolioFile().exists();
       JButton refreshDataButton = (JButton) getComponent("refreshDataButton");
 
@@ -483,16 +517,17 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       ((JLabel) getComponent("lastModified")).setText(heroLabData.getLastModifiedDateString());
 
       EventQueue.invokeLater(this::loadHeroLabImageList);
-
     } else {
+      getHeroLabImagesList().setCellRenderer(new DefaultListCellRenderer());
+
       tabbedPane.setEnabledAt(tabbedPane.indexOfTab(heroLabTitle), false);
       if (tabbedPane.getSelectedIndex() == tabbedPane.indexOfTab(heroLabTitle)) {
         tabbedPane.setSelectedIndex(6);
       }
     }
 
-    // we will disable the Owner only visible check box if the token is not
-    // visible to players to signify the relationship
+    /* we will disable the Owner only visible check box if the token is not
+    visible to players to signify the relationship */
     ActionListener tokenVisibleActionListener =
         actionEvent -> {
           AbstractButton abstractButton = (AbstractButton) actionEvent.getSource();
@@ -506,16 +541,18 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   private void setGmNotesEnabled(boolean enabled) {
-    JTabbedPane tabbedPane = getTabbedPane();
-    String libTokenTile = I18N.getString("EditTokenDialog.label.gmnotes");
-    tabbedPane.setEnabledAt(tabbedPane.indexOfTab(libTokenTile), enabled);
+    JTabbedPane tabbedPane = view.getNotesTabbedPane();
+    var index = tabbedPane.indexOfComponent(view.getGmNotesPanel());
+    tabbedPane.setEnabledAt(index, enabled);
+    if (!enabled) {
+      tabbedPane.setSelectedIndex(tabbedPane.indexOfComponent(view.getPlayerNotesPanel()));
+    }
+
     getGMNotesEditor().setEnabled(enabled);
   }
 
   private void setLibTokenPaneEnabled(boolean show) {
-    JTabbedPane tabbedPane = getTabbedPane();
-    String libTokenTile = I18N.getString("EditTokenDialog.tab.libToken");
-    tabbedPane.setEnabledAt(tabbedPane.indexOfTab(libTokenTile), show);
+    getLibTokenProperties().setEnabled(show);
     getAllowURLAccess().setEnabled(show);
   }
 
@@ -528,7 +565,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   public void initTypeCombo() {
-    getTypeCombo().setModel(new DefaultComboBoxModel<>(Token.Type.values()));
+    getTypeCombo().setModel(new DefaultComboBoxModel<>(Type.values()));
   }
 
   public void initLibTokenTable() {
@@ -579,8 +616,9 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   public ImageAssetPanel getTokenIconPanel() {
     if (imagePanel == null) {
       imagePanel = new ImageAssetPanel();
+
       imagePanel.setAllowEmptyImage(false);
-      replaceComponent("mainPanel", "tokenImage", imagePanel);
+      replaceComponent("imagePanel", "tokenImage", imagePanel);
     }
     return imagePanel;
   }
@@ -599,7 +637,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         .addItemListener(
             e -> {
               if (e.getStateChange() == ItemEvent.SELECTED) {
-                updatePropertiesTable((String) getPropertyTypeCombo().getSelectedItem());
+                updatePropertiesTable(
+                    getModel(), (String) getPropertyTypeCombo().getSelectedItem());
               }
             });
   }
@@ -633,11 +672,19 @@ public class EditTokenDialog extends AbeillePanel<Token> {
    *
    * @param propertyType the property type of the token (unused).
    */
-  private void updatePropertiesTable(final String propertyType) {
+  private void updatePropertiesTable(@Nullable Token token, final String propertyType) {
     EventQueue.invokeLater(
         () -> {
           PropertyTable pp = getPropertyTable();
-          pp.setModel(new TokenPropertyTableModel());
+          if (token != null) {
+            var propertyList = MapTool.getCampaign().getTokenPropertyList(propertyType);
+
+            pp.setModel(
+                new TokenPropertyTableModel(
+                    token, propertyType, propertyList, propertyCellRenderer));
+          } else {
+            pp.setModel(new DefaultTableModel());
+          }
           pp.expandAll();
         });
   }
@@ -676,7 +723,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   public void initTokenOpacitySlider() {
-    getTokenOpacitySlider().addChangeListener(new SliderListener());
+    getTokenOpacitySlider().addChangeListener(new OpacitySliderListener());
   }
 
   public JSlider getTokenOpacitySlider() {
@@ -701,11 +748,28 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
   public void setUniqueLightSourcesEnabled(boolean enabled) {
     getUniqueLightSourcesTextPane().setEnabled(enabled);
-    getLabel("uniqueLightSourcesLabel").setEnabled(enabled);
+    getUniqueLightSourcesPanel().setEnabled(enabled);
+  }
+
+  public JPanel getUniqueLightSourcesPanel() {
+    return (JPanel) getComponent("uniqueLightSourcesPanel");
   }
 
   public JTextPane getUniqueLightSourcesTextPane() {
     return (JTextPane) getComponent("uniqueLightSources");
+  }
+
+  public void setUniqueAurasEnabled(boolean enabled) {
+    getUniqueAurasTextPane().setEnabled(enabled);
+    getUniqueAurasPanel().setEnabled(enabled);
+  }
+
+  public JTextPane getUniqueAurasTextPane() {
+    return (JTextPane) getComponent("uniqueAuras");
+  }
+
+  public JPanel getUniqueAurasPanel() {
+    return (JPanel) getComponent("uniqueAurasPanel");
   }
 
   public JLabel getLibTokenURIErrorLabel() {
@@ -727,7 +791,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   public boolean commit() {
     Token token = getModel();
 
-    if (getNameField().getText().equals("")) {
+    if (getNameField().getText().isEmpty()) {
       MapTool.showError("msg.error.emptyTokenName");
       return false;
     }
@@ -737,30 +801,30 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     if (getPropertyTable().isEditing()) {
       getPropertyTable().getCellEditor().stopCellEditing();
     }
-    // Commit the changes to the token properties
-    // If no map available, cancel the commit. Fixes #1646.
+    /* Commit the changes to the token properties */
+    /* If no map available, cancel the commit. Fixes #1646. */
     if (!super.commit() || MapTool.getFrame().getCurrentZoneRenderer() == null) {
       return false;
     }
-    // TYPE
-    // Only update this if it actually changed
+    /* TYPE */
+    /* Only update this if it actually changed */
     if (getTypeCombo().getSelectedItem() != token.getType()) {
-      token.setType((Token.Type) getTypeCombo().getSelectedItem());
+      token.setType((Type) getTypeCombo().getSelectedItem());
     }
 
-    // NOTES
+    /* NOTES */
     token.setGMNotes(getGMNotesEditor().getText());
     token.setGmNotesType(getGMNotesEditor().getTextType());
     token.setNotes(getPlayerNotesEditor().getText());
     token.setNotesType(getPlayerNotesEditor().getTextType());
 
-    // SIZE
+    /* SIZE */
     token.setSnapToScale(getSizeCombo().getSelectedIndex() != 0);
     if (getSizeCombo().getSelectedIndex() > 0) {
       Grid grid = MapTool.getFrame().getCurrentZoneRenderer().getZone().getGrid();
       token.setFootprint(grid, (TokenFootprint) getSizeCombo().getSelectedItem());
     }
-    // Other
+    /* Other */
     token.setPropertyType((String) getPropertyTypeCombo().getSelectedItem());
     token.setSightType((String) getSightTypeCombo().getSelectedItem());
     token.setImageTableName((String) getImageTableCombo().getSelectedItem());
@@ -772,7 +836,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     try {
       token.setTerrainModifier(Double.parseDouble(getTerrainModifier().getText()));
     } catch (NumberFormatException e) {
-      // User didn't enter a valid float...
+      /* User didn't enter a valid float... */
       token.setTerrainModifier(1);
     }
 
@@ -782,50 +846,50 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     token.setTerrainModifiersIgnored(
         new HashSet<>(getTerrainModifiersIgnoredList().getSelectedValuesList()));
 
-    var uniqueLightSources =
+    var existingUniqueLightSources = token.getUniqueLightSources();
+    var uniqueLightSources = new ArrayList<LightSource>();
+    var uniqueLights =
         new LightSyntax()
-            .parseLights(getUniqueLightSourcesTextPane().getText(), token.getUniqueLightSources());
+            .parseLights(getUniqueLightSourcesTextPane().getText(), existingUniqueLightSources);
+    var uniqueAuras =
+        new AuraSyntax().parseAuras(getUniqueAurasTextPane().getText(), existingUniqueLightSources);
+    uniqueLightSources.addAll(uniqueLights.values());
+    uniqueLightSources.addAll(uniqueAuras.values());
+
     token.removeAllUniqueLightsources();
-    for (var lightSource : uniqueLightSources.values()) {
+    for (var lightSource : uniqueLightSources) {
       token.addUniqueLightSource(lightSource);
     }
 
-    // Get the states
+    /* Get the states */
     Component[] stateComponents = getStatesPanel().getComponents();
-    Container barPanel = null;
     for (Component stateComponent : stateComponents) {
-      if ("bar".equals(stateComponent.getName())) {
-        barPanel = (Container) stateComponent;
-        continue;
-      }
       Component[] components = ((Container) stateComponent).getComponents();
       for (Component component : components) {
         JCheckBox cb = (JCheckBox) component;
         String state = cb.getText();
         token.setState(state, cb.isSelected() ? Boolean.TRUE : Boolean.FALSE);
       }
-    } // endfor
-
-    // BARS
-    if (barPanel != null) {
-      for (var barContainer : barPanel.getComponents()) {
-        var barComponents = ((Container) barContainer).getComponents();
-
-        JSlider bar = (JSlider) barComponents[1];
-        JCheckBox cb = (JCheckBox) barComponents[2];
-
-        BigDecimal value =
-            cb.isSelected() ? null : new BigDecimal(bar.getValue()).divide(new BigDecimal(100));
-        token.setState(bar.getName(), value);
-        bar.setValue(
-            (int)
-                (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
-                    * 100));
-      }
     }
-    // Ownership
-    // If the token is owned by all and we are a player don't alter the ownership
-    // list.
+
+    /* BARS */
+    var barsPanel = getBarsPanel();
+    for (var barContainer : barsPanel.getComponents()) {
+      var barComponents = ((Container) barContainer).getComponents();
+
+      JSlider bar = (JSlider) barComponents[1];
+      JCheckBox cb = (JCheckBox) barComponents[2];
+
+      BigDecimal value =
+          cb.isSelected() ? null : new BigDecimal(bar.getValue()).divide(new BigDecimal(100));
+      token.setState(bar.getName(), value);
+      bar.setValue(
+          (int)
+              (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
+                  * 100));
+    }
+    /* OWNERSHIP */
+    /* If the token is owned by all and we are a player don't alter the ownership list. */
     if (MapTool.getPlayer().isGM() || !token.isOwnedByAll()) {
       token.clearAllOwners();
 
@@ -836,8 +900,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           token.addOwner((String) selectable.getObject());
         }
       }
-      // If we are not a GM and the only non GM owner make sure we can't
-      // take our selves off of the owners list
+      /* If we are not a GM and we are the only non-GM owner, make sure we cannot remove ourself from the owners list */
       if (!MapTool.getPlayer().isGM()) {
         boolean hasPlayer = token.isOwnedByAny(MapTool.getNonGMs());
         if (!hasPlayer) {
@@ -845,10 +908,10 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         }
       }
     }
-    // SHAPE
+    /* SHAPE */
     token.setShape((Token.TokenShape) getShapeCombo().getSelectedItem());
 
-    // Stat Sheet
+    /* Stat Sheet */
     var ss = (StatSheet) getStatSheetCombo().getSelectedItem();
     if (ss == null || (ss.name() == null && ss.namespace() == null)) {
       token.useDefaultStatSheet();
@@ -861,37 +924,38 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       token.setStatSheet(new StatSheetProperties(ssManager.getId(ss), location));
     }
 
-    // Macros
+    /* Macros */
     token.setSpeechMap(((KeyValueTableModel) getSpeechTable().getModel()).getMap());
 
-    // Properties
+    /* Properties */
     ((TokenPropertyTableModel) getPropertyTable().getModel()).applyTo(token);
 
-    // Charsheet
+    /* Charsheet */
     if (getCharSheetPanel().getImageId() != null) {
       MapToolUtil.uploadAsset(AssetManager.getAsset(getCharSheetPanel().getImageId()));
     }
     token.setCharsheetImage(getCharSheetPanel().getImageId());
 
-    // IMAGE
+    /* IMAGE */
     if (!token.getImageAssetId().equals(getTokenIconPanel().getImageId())) {
       MapToolUtil.uploadAsset(AssetManager.getAsset(getTokenIconPanel().getImageId()));
       token.setImageAsset(null, getTokenIconPanel().getImageId()); // Default image for now
     }
-    // PORTRAIT
+    /* PORTRAIT */
     if (getPortraitPanel().getImageId() != null) {
-      // Make sure the server has the image
+      /* Make sure the server has the image */
       if (!MapTool.getCampaign().containsAsset(getPortraitPanel().getImageId())) {
         MapTool.serverCommand().putAsset(AssetManager.getAsset(getPortraitPanel().getImageId()));
       }
     }
     token.setPortraitImage(getPortraitPanel().getImageId());
 
-    // LAYOUT
-    token.setSizeScale(getTokenLayoutPanel().getSizeScale());
-    token.setAnchor(getTokenLayoutPanel().getAnchorX(), getTokenLayoutPanel().getAnchorY());
+    /* LAYOUT */
+    getTokenLayoutPanel().getHelper().commitChanges(token);
 
-    // TOPOLOGY
+    token.setSnapToGrid(getSnapToGrid().isSelected());
+
+    /* TOPOLOGY */
     for (final var type : Zone.TopologyType.values()) {
       token.setMaskTopology(type, getTokenTopologyPanel().getTopology(type));
     }
@@ -905,17 +969,12 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     token.setHeroLabData(heroLabData);
 
-    // URI Access
+    /* URI Access */
     token.setAllowURIAccess(getAllowURLAccess().isEnabled() && getAllowURLAccess().isSelected());
-    // OTHER
+    /* OTHER */
     tokenSaved = true;
 
-    // Character Sheet
-    // Map<String, Object> properties = controller.getData();
-    // for (String prop : token.getPropertyNames())
-    // token.setProperty(prop, properties.get(prop));
-
-    // Update UI
+    /* Update UI */
     MapTool.getFrame().updateTokenTree();
     MapTool.getFrame().resetTokenPanels();
 
@@ -948,57 +1007,61 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   private void updateStatesPanel() {
-    // Group the states first into individual panels
+    JPanel statesPanel = getStatesPanel();
+    statesPanel.setLayout(new MigLayout("wrap", "[fill,grow]"));
+    statesPanel.removeAll();
+    /* Group the states first into individual panels */
     List<BooleanTokenOverlay> overlays =
         new ArrayList<BooleanTokenOverlay>(MapTool.getCampaign().getTokenStatesMap().values());
-    Map<String, JPanel> groups = new TreeMap<String, JPanel>();
-    var noGroupPanel =
-        new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
-    noGroupPanel.setName("no group");
-    groups.put("", noGroupPanel);
-    for (BooleanTokenOverlay overlay : overlays) {
-      String group = overlay.getGroup();
-      if (group != null && (group = group.trim()).length() != 0) {
-        JPanel panel = groups.get(group);
-        if (panel == null) {
-          panel =
-              new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
-          panel.setName(group);
-          panel.setBorder(BorderFactory.createTitledBorder(group));
-          groups.put(group, panel);
+    if (overlays.isEmpty()) {
+      statesPanel.setVisible(false);
+    } else {
+      statesPanel.setVisible(true);
+      Map<String, JPanel> groups = new TreeMap<String, JPanel>();
+      var noGroupPanel =
+          new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
+      noGroupPanel.setName("no group");
+      groups.put("", noGroupPanel);
+      for (BooleanTokenOverlay overlay : overlays) {
+        String group = overlay.getGroup();
+        if (group != null && !(group = group.trim()).isEmpty()) {
+          JPanel panel = groups.get(group);
+          if (panel == null) {
+            panel =
+                new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
+            panel.setName(group);
+            panel.setBorder(BorderFactory.createTitledBorder(group));
+            groups.put(group, panel);
+          }
         }
       }
-    }
 
-    // Add the group panels and bar panel to the states panel
-    JPanel statesPanel = getStatesPanel();
-    MigLayout layout = new MigLayout("wrap", "[fill,grow]");
-    statesPanel.setLayout(layout);
-    statesPanel.removeAll();
-
-    // Add the individual check boxes.
-    for (BooleanTokenOverlay state : overlays) {
-      String group = state.getGroup();
-      var panel = groups.get("");
-      if (group != null && (group = group.trim()).length() != 0) {
-        panel = groups.get(group);
+      /* Add the individual check boxes. */
+      for (BooleanTokenOverlay state : overlays) {
+        String group = state.getGroup();
+        var panel = groups.get("");
+        if (group != null && !(group = group.trim()).isEmpty()) {
+          panel = groups.get(group);
+        }
+        panel.add(new JCheckBox(state.getName()));
       }
-      panel.add(new JCheckBox(state.getName()));
+
+      /* Add the group panels to the states panel */
+      for (JPanel gPanel : groups.values()) {
+        if (gPanel.getComponentCount() == 0) continue;
+
+        statesPanel.add(gPanel);
+      }
     }
 
-    for (JPanel gPanel : groups.values()) {
-      if (gPanel.getComponentCount() == 0) continue;
-
-      statesPanel.add(gPanel);
-    }
-
-    JPanel barPanel = new JPanel(new MigLayout("wrap 2", "[fill,grow][fill,grow]"));
-    barPanel.setName("bar");
-    // Add sliders to the bar panel
-    if (MapTool.getCampaign().getTokenBarsMap().size() > 0) {
-      barPanel.setBorder(
-          BorderFactory.createTitledBorder(I18N.getText("CampaignPropertiesDialog.tab.bars")));
-
+    /* Add sliders to the bar panel */
+    var barsPanel = getBarsPanel();
+    barsPanel.setLayout(new MigLayout("wrap 1", "[fill,grow]"));
+    barsPanel.removeAll();
+    if (MapTool.getCampaign().getTokenBarsMap().isEmpty()) {
+      barsPanel.setVisible(false);
+    } else {
+      barsPanel.setVisible(true);
       for (BarTokenOverlay bar : MapTool.getCampaign().getTokenBarsMap().values()) {
         JSlider slider = new JSlider(0, 100);
         JCheckBox hide = new JCheckBox(I18N.getString("EditTokenDialog.checkbox.state.hide"));
@@ -1019,9 +1082,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         tokenbarPanel.add(new JLabel(bar.getName() + ":"));
         tokenbarPanel.add(slider, "span 1 2 align right");
         tokenbarPanel.add(hide);
-        barPanel.add(tokenbarPanel);
+        barsPanel.add(tokenbarPanel);
       }
-      statesPanel.add(barPanel);
     }
   }
 
@@ -1034,6 +1096,10 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
   public JPanel getStatesPanel() {
     return (JPanel) getComponent("statesPanel");
+  }
+
+  public JPanel getBarsPanel() {
+    return (JPanel) getComponent("barsPanel");
   }
 
   public JTable getSpeechTable() {
@@ -1156,8 +1222,28 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (JSpinner) getComponent("visibilityToleranceSpinner");
   }
 
+  public JPanel getLibTokenProperties() {
+    return (JPanel) getComponent("panel.libToken");
+  }
+
   public JCheckBox getAllowURLAccess() {
     return (JCheckBox) getComponent("@allowURIAccess");
+  }
+
+  public JCheckBox getSnapToGrid() {
+    return getCheckBox("@isSnapToGrid");
+  }
+
+  public JCheckBox getFlippedIso() {
+    return getCheckBox("@isFlippedIso");
+  }
+
+  public JCheckBox getFlippedX() {
+    return getCheckBox("@isFlippedX");
+  }
+
+  public JCheckBox getFlippedY() {
+    return getCheckBox("@isFlippedY");
   }
 
   public void initSpeechPanel() {
@@ -1195,7 +1281,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     propertyTable.setFillsViewportHeight(true);
     propertyTable.setName("propertiesTable");
 
-    // wrap button and functionality
+    /* wrap button and functionality */
     JPanel buttonsAndPropertyTable = new JPanel();
     buttonsAndPropertyTable.setLayout(new BorderLayout());
     JCheckBox wrapToggle = new JCheckBox(I18N.getString("EditTokenDialog.msg.wrap"));
@@ -1212,7 +1298,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   public void initTokenLayoutPanel() {
-    TokenLayoutPanel layoutPanel = new TokenLayoutPanel();
+    TokenLayoutRenderPanel layoutPanel = new TokenLayoutRenderPanel();
+    new TokenLayoutPanelHelper(this, layoutPanel, getOKButton());
     layoutPanel.setMinimumSize(new Dimension(150, 125));
     layoutPanel.setPreferredSize(new Dimension(150, 125));
     layoutPanel.setName("tokenLayout");
@@ -1248,8 +1335,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (ImageAssetPanel) getComponent("charsheet");
   }
 
-  public TokenLayoutPanel getTokenLayoutPanel() {
-    return (TokenLayoutPanel) getComponent("tokenLayout");
+  public TokenLayoutRenderPanel getTokenLayoutPanel() {
+    return (TokenLayoutRenderPanel) getComponent("tokenLayout");
   }
 
   public TokenTopologyPanel getTokenTopologyPanel() {
@@ -1488,10 +1575,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   /*
    * Initialize the Hero Lab Images tab
    */
-  @SuppressWarnings("unchecked")
   public void initHeroLabImageList() {
-    getHeroLabImagesList().setCellRenderer(new HeroLabImageListRenderer());
-
     JButton setTokenImage = (JButton) getComponent("setAsImageButton");
     setTokenImage.addActionListener(
         e -> {
@@ -1499,7 +1583,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
           if (heroLabData != null) {
             getTokenIconPanel().setImageId(heroLabData.getImageAssetID(index));
-            getTokenLayoutPanel().setTokenImage(heroLabData.getImageAssetID(index));
+            getTokenLayoutPanel().getHelper().setTokenImageId(heroLabData.getImageAssetID(index));
           }
         });
 
@@ -1542,25 +1626,25 @@ public class EditTokenDialog extends AbeillePanel<Token> {
    * Initialize the Hero Lab statblock tabs
    */
   public void initStatBlocks() {
-    // Setup the HTML panel
+    /* Setup the HTML panel */
     JEditorPane statblockPane = getHtmlStatblockEditor();
     HTMLEditorKit kit = new HTMLEditorKit();
     HTMLDocument statblockDoc = (HTMLDocument) kit.createDefaultDocument();
     statblockPane.setEditorKit(kit);
     statblockPane.setDocument(statblockDoc);
 
-    // We need this property as the kit can't handle <meta http-equiv="Content-Type"
-    // content="text/html; charset=XYZ> and the rendered html is blank
+    /* We need this property as the kit can't handle <meta http-equiv="Content-Type"
+    content="text/html; charset=XYZ> and the rendered html is blank */
     statblockDoc.putProperty("IgnoreCharsetDirective", true);
 
-    // Setup the XML panel
+    /* Setup the XML panel */
     xmlStatblockRSyntaxTextArea.setSyntaxEditingStyle(SyntaxConstants.SYNTAX_STYLE_XML);
     xmlStatblockRSyntaxTextArea.setEditable(false);
     xmlStatblockRSyntaxTextArea.setCodeFoldingEnabled(true);
     xmlStatblockRSyntaxTextArea.setLineWrap(true);
     xmlStatblockRSyntaxTextArea.setWrapStyleWord(true);
     xmlStatblockRSyntaxTextArea.setTabSize(2);
-    // Set the color style via Theme
+    /* Set the color style via Theme */
     try {
       File themeFile =
           new File(AppConstants.THEMES_DIR, AppPreferences.defaultMacroEditorTheme.get() + ".xml");
@@ -1577,13 +1661,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     replaceComponent(
         "xmlStatblockPanel", "xmlStatblockRTextScrollPane", xmlStatblockRTextScrollPane);
 
-    // Setup the TEXT panel
+    /* Setup the TEXT panel */
     textStatblockRSyntaxTextArea.setUseFocusableTips(false);
     textStatblockRSyntaxTextArea.setEditable(false);
     textStatblockRSyntaxTextArea.setLineWrap(true);
     textStatblockRSyntaxTextArea.setWrapStyleWord(true);
     textStatblockRSyntaxTextArea.setTabSize(2);
-    // Set the color style via Theme
+    /* Set the color style via Theme */
     try {
       File themeFile =
           new File(AppConstants.THEMES_DIR, AppPreferences.defaultMacroEditorTheme.get() + ".xml");
@@ -1601,7 +1685,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     replaceComponent(
         "textStatblockPanel", "textStatblockRTextScrollPane", textStatblockRTextScrollPane);
 
-    // Setup the refresh button, #refreshes the HeroLabData from the portfolio
+    /* Setup the refresh button, #refreshes the HeroLabData from the portfolio */
     JButton refreshDataButton = (JButton) getComponent("refreshDataButton");
     refreshDataButton.addActionListener(
         e -> {
@@ -1629,11 +1713,11 @@ public class EditTokenDialog extends AbeillePanel<Token> {
               textStatblockRSyntaxTextArea.setText(heroLabData.getStatBlock_text());
               textStatblockRSyntaxTextArea.setCaretPosition(0);
 
-              // Update the images
+              /* Update the images */
               MD5Key tokenImageKey = heroLabData.getTokenImage();
               if (tokenImageKey != null) {
                 getTokenIconPanel().setImageId(tokenImageKey);
-                getTokenLayoutPanel().setTokenImage(tokenImageKey);
+                getTokenLayoutPanel().getHelper().setTokenImageId(tokenImageKey);
               }
 
               MD5Key portraitAssetKeY = heroLabData.getPortraitImage();
@@ -1646,8 +1730,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 getCharSheetPanel().setImageId(handoutAssetKey);
               }
 
-              // If NPC, lets not overwrite the Name, it may be "Creature 229" or such, GM
-              // name is enough
+              /* If NPC, lets not overwrite the Name, it may be "Creature 229" or such, GM
+              name is enough */
               ((JTextField) getComponent("@GMName")).setText(heroLabData.getName());
               if (heroLabData.isAlly()) {
                 getTypeCombo().setSelectedItem(Type.PC);
@@ -1656,13 +1740,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 getTypeCombo().setSelectedItem(Type.NPC);
               }
 
-              // Update image list
+              /* Update image list */
               loadHeroLabImageList();
             }
           }
         });
 
-    // Setup xPath searching for XML StatBlock
+    /* Setup xPath searching for XML StatBlock */
     JTextField xmlStatblockSearchTextField =
         (JTextField) getComponent("xmlStatblockSearchTextField");
     JButton xmlStatblockSearchButton = (JButton) getComponent("xmlStatblockSearchButton");
@@ -1696,7 +1780,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           xmlStatblockRSyntaxTextArea.setCaretPosition(0);
         });
 
-    // Setup regular expression searching for TEXT StatBlock
+    /* Setup regular expression searching for TEXT StatBlock */
     JTextField textStatblockSearchTextField =
         (JTextField) getComponent("textStatblockSearchTextField");
     JButton textStatblockSearchButton = (JButton) getComponent("textStatblockSearchButton");
@@ -1840,7 +1924,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       Map<String, String> map = new HashMap<String, String>();
 
       for (Association<String, String> row : rowList) {
-        if (row.getLeft() == null || row.getLeft().trim().length() == 0) {
+        if (row.getLeft() == null || row.getLeft().trim().isEmpty()) {
           continue;
         }
         map.put(row.getLeft(), row.getRight());
@@ -1849,7 +1933,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // needed to change the popup for properties
+  /* needed to change the popup for properties */
   private static class MTMultilineStringExComboBox extends MultilineStringExComboBox {
 
     final ResourceBundle a = ResourceBundle.getBundle("com.jidesoft.combobox.combobox");
@@ -1866,7 +1950,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // the cell editor for property popups
+  /* the cell editor for property popups */
   private static class MTMultilineStringCellEditor extends MultilineStringCellEditor {
 
     protected MTMultilineStringExComboBox createMultilineStringComboBox() {
@@ -1878,7 +1962,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // the property popup table
+  /* the property popup table */
   private static class MTMultilineStringPopupPanel extends PopupPanel {
 
     private RSyntaxTextArea j = createTextArea();
@@ -1889,7 +1973,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     public MTMultilineStringPopupPanel(String paramString) {
       this.setResizable(true);
-      // Set the color style via Theme
+      /* Set the color style via Theme */
       try {
         File themeFile =
             new File(
@@ -1951,14 +2035,14 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // cell renderer for properties table
+  /* cell renderer for properties table */
   private static class WordWrapCellRenderer extends RSyntaxTextArea implements TableCellRenderer {
 
     WordWrapCellRenderer() {
       setLineWrap(false);
       setWrapStyleWord(true);
 
-      // Set the color style via Theme
+      /* Set the color style via Theme */
       try {
         File themeFile =
             new File(
@@ -2007,14 +2091,14 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         publish(generatedTopology);
       }
 
-      // Nothing to do, so nothing to publish.
+      /* Nothing to do, so nothing to publish. */
       return null;
     }
 
     @Override
     protected void process(List<Area> areaChunk) {
       if (!isCancelled()) {
-        final var newArea = areaChunk.get(areaChunk.size() - 1);
+        final var newArea = areaChunk.getLast();
         final var optimizedArea =
             TokenVBL.simplifyArea(
                 newArea,
@@ -2033,7 +2117,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  class SliderListener implements ChangeListener {
+  private class OpacitySliderListener implements ChangeListener {
 
     public void stateChanged(ChangeEvent e) {
       JSlider source = (JSlider) e.getSource();
@@ -2047,10 +2131,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  public class HeroLabImageListRenderer extends DefaultListCellRenderer {
+  private static class HeroLabImageListRenderer extends DefaultListCellRenderer {
+    private final Font font = new Font("helvitica", Font.BOLD, 24);
+    private final HeroLabData heroLabData;
 
-    private static final long serialVersionUID = 7113815213979044509L;
-    Font font = new Font("helvitica", Font.BOLD, 24);
+    public HeroLabImageListRenderer(HeroLabData heroLabData) {
+      this.heroLabData = heroLabData;
+    }
 
     @Override
     public Component getListCellRendererComponent(
@@ -2059,7 +2146,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           (JLabel) super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
       try {
         ImageIcon finalImage =
-            ImageUtil.scaleImage(
+            ImageUtil.scaleImageIcon(
                 new ImageIcon(ImageManager.getImageAndWait(heroLabData.getImageAssetID(index))),
                 250,
                 175);
@@ -2074,94 +2161,42 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // //
-  // HANDLER
-  public static class MouseHandler extends MouseAdapter {
-
-    HtmlEditorSplit source;
-
-    public MouseHandler(HtmlEditorSplit source) {
-      this.source = source;
-    }
-
-    @Override
-    public void mouseClicked(MouseEvent e) {
-      if (SwingUtilities.isRightMouseButton(e)) {
-        JPopupMenu menu = new JPopupMenu();
-        JMenuItem sendToChatItem =
-            new JMenuItem(I18N.getString("EditTokenDialog.menu.notes.sendChat"));
-        sendToChatItem.addActionListener(
-            e12 -> {
-              String selectedText = source.getSelectedText();
-              if (selectedText == null) {
-                selectedText = source.getText();
-              }
-              JTextComponent commandArea =
-                  MapTool.getFrame().getCommandPanel().getCommandTextArea();
-
-              commandArea.setText(commandArea.getText() + selectedText);
-              commandArea.requestFocusInWindow();
-            });
-        menu.add(sendToChatItem);
-
-        JMenuItem sendAsEmoteItem =
-            new JMenuItem(I18N.getString("EditTokenDialog.menu.notes.sendEmit"));
-        sendAsEmoteItem.addActionListener(
-            e1 -> {
-              String selectedText = source.getSelectedText();
-              if (selectedText == null) {
-                selectedText = source.getText();
-              }
-              MapTool.getFrame().getCommandPanel().commitCommand("/emit " + selectedText);
-              MapTool.getFrame().getCommandPanel().getCommandTextArea().requestFocusInWindow();
-            });
-        menu.add(sendAsEmoteItem);
-        menu.show((JComponent) e.getSource(), e.getX(), e.getY());
-      }
-    }
-  }
-
-  // //
-  // MODELS
-  private class TokenPropertyTableModel
-      extends AbstractPropertyTableModel<EditTokenDialog.TokenPropertyTableModel.EditTokenProperty>
+  /* MODELS */
+  private static class TokenPropertyTableModel
+      extends PropertyTableModel<TokenPropertyTableModel.EditTokenProperty>
       implements NavigableModel {
+    private final List<TokenProperty> propertyList;
+    private final Map<String, String> propertyMap;
 
-    private static final long serialVersionUID = 2822797264738675580L;
+    public TokenPropertyTableModel(
+        Token model,
+        String propertyType,
+        List<TokenProperty> propertyList,
+        TableCellRenderer propertyCellRenderer) {
+      this.propertyList = propertyList;
 
-    private Map<String, String> propertyMap;
-    private List<TokenProperty> propertyList;
-
-    private Map<String, String> getPropertyMap() {
-      Token token = getModel();
-
-      if (propertyMap == null) {
-        propertyMap = new HashMap<String, String>();
-
-        List<TokenProperty> propertyList = getPropertyList();
-        for (TokenProperty property : propertyList) {
-          String value = (String) token.getProperty(property.getName());
-          if (value == null) {
-            value = property.getDefaultValue();
-          }
-          propertyMap.put(property.getName(), value);
+      this.propertyMap = new HashMap<>();
+      for (TokenProperty property : propertyList) {
+        String value = (String) model.getProperty(property.getName());
+        if (value == null) {
+          value = property.getDefaultValue();
         }
+        this.propertyMap.put(property.getName(), value);
       }
-      return propertyMap;
-    }
 
-    private List<TokenProperty> getPropertyList() {
-      if (propertyList == null) {
-        propertyList =
-            MapTool.getCampaign()
-                .getTokenPropertyList((String) getPropertyTypeCombo().getSelectedItem());
+      var gridProperties = new ArrayList<EditTokenProperty>();
+      for (var tokenProperty : propertyList) {
+        var gridProperty = new EditTokenProperty(tokenProperty.getName(), propertyType);
+        gridProperty.setTableCellRenderer(propertyCellRenderer);
+        gridProperty.setCellEditor(new MTMultilineStringCellEditor());
+        gridProperties.add(gridProperty);
       }
-      return propertyList;
+      setOriginalProperties(gridProperties);
     }
 
     public void applyTo(Token token) {
-      for (TokenProperty property : getPropertyList()) {
-        String value = getPropertyMap().get(property.getName());
+      for (TokenProperty property : propertyList) {
+        String value = propertyMap.get(property.getName());
         if (property.getDefaultValue() != null && property.getDefaultValue().equals(value)) {
           token.setProperty(property.getName(), null); // Clear original value
           continue;
@@ -2172,8 +2207,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     @Override
     public boolean isNavigableAt(int rowIndex, int columnIndex) {
-      // make the property name column non-navigable so that tab takes you
-      // directly to the next property value cell.
+      /* make the property name column non-navigable so that tab takes you directly to the next property value cell. */
       return (columnIndex != 0);
     }
 
@@ -2182,53 +2216,36 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       return true;
     }
 
-    @Override
-    public EditTokenProperty getProperty(int index) {
-      return new EditTokenProperty(getPropertyList().get(index).getName());
-    }
-
-    @Override
-    public int getPropertyCount() {
-      return getPropertyList() != null ? getPropertyList().size() : 0;
-    }
-
     class EditTokenProperty extends Property {
-
-      private static final long serialVersionUID = 4129033551005743554L;
-      private final String key;
-
-      public EditTokenProperty(String key) {
-        super(key, key, String.class, (String) getPropertyTypeCombo().getSelectedItem());
-        this.setTableCellRenderer(propertyCellRenderer);
-        this.key = key;
-        setCellEditor(new MTMultilineStringCellEditor());
+      public EditTokenProperty(String key, String propertyType) {
+        super(key, key, String.class, propertyType);
       }
 
       @Override
       public Object getValue() {
-        return getPropertyMap().get(key);
+        return propertyMap.get(getName());
       }
 
       @Override
       public void setValue(Object value) {
-        getPropertyMap().put(key, (String) value);
+        propertyMap.put(getName(), (String) value);
       }
 
       @Override
       public boolean hasValue() {
-        return getPropertyMap().get(key) != null;
+        return propertyMap.get(getName()) != null;
       }
     }
   }
 
-  private class OwnerListModel extends AbstractListModel {
+  private static final class OwnerListModel extends AbstractListModel<Selectable> {
 
     private static final long serialVersionUID = 2375600545516097234L;
 
     List<Selectable> ownerList = new ArrayList<Selectable>();
 
-    public OwnerListModel() {
-      Set<String> ownerSet = getModel().getOwners();
+    public OwnerListModel(Token model) {
+      Set<String> ownerSet = model.getOwners();
       List<String> list = new ArrayList<String>(ownerSet);
 
       List<Player> playerList = MapTool.getPlayerList();
@@ -2248,7 +2265,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       }
     }
 
-    public Object getElementAt(int index) {
+    public Selectable getElementAt(int index) {
       return ownerList.get(index);
     }
 
